--- a/CHR/3.Polina.md
+++ b/CHR/3.Polina.md
@@ -11,3 +11,5 @@
 - Пацанка, любит ходить в чёрном. 
 - В основном дружит с парнями, не интересуют отношения.
 </h3> 
+
+<img src="img/polina.png"></img>
