--- a/CHR/1.Dima.md
+++ b/CHR/1.Dima.md
@@ -11,7 +11,7 @@
 
 Спокойный, но в то же время весёлый.
 
-Из-за некоторых событий c детствf немного замкнутый и с ходу ему не удобно через, если только не через Дискорд. 
+Из-за некоторых событий c детства немного замкнутый и с ходу ему не удобно через, если только не через Дискорд. 
 
 Когда он находит свою зону комфорта в обществе (группа людей, схожие с ним интересами) ведёт себя открыто, весело, часто шутит и в целом о нём складывается впечатление, что он уверенный в себе, жизнерадостный, умеет справляться с трудностями
 
