--- a/CHR/4.Sneshana.md
+++ b/CHR/4.Sneshana.md
@@ -6,8 +6,11 @@
   - Ходит в разноцветной одежде: штаны, водолазка, иногда накидывает рубашку, кросовки.
   - Волосы прямые до плеча. Носит серёжки, цепочку на шее.
   - Обычно накрашена не выделяясь, но аккуратно.</h3>
-<h3><b>Характеристика: По характеру похоже на пацанку, но является достаточно женственной. Любит аниме, манги и играть в казуальные игры.
-  На первый взгляд кажется спокойной, рассудительной, но при большем сближении с ней, начинает занудничать. Вкратце можно назвать её
-  душнилой.</h3>
+<h3><b>Характеристика:
+  
+  - По характеру похожа на пацанку, но является достаточно женственной.
+  - Любит аниме, манги и играть в казуальные игры.
+  - На первый взгляд кажется спокойной, рассудительной, но при большем сближении с ней, начинает занудничать.
+  - Вкратце можно назвать её душнилой.</h3>
 
 <img src="img/.png"></img>
