--- a/CHR/4.Sneshana.md
+++ b/CHR/4.Sneshana.md
@@ -2,7 +2,7 @@
 <h3><b>Пол</b>: Женский</h3>
 <h3><b>Внешний вид</b>:
   
-  - Девушка среднего роста роста, немного выше Полины.
+  - Девушка среднего роста, немного выше Полины.
   - Ходит в разноцветной одежде: штаны, водолазка, иногда накидывает рубашку, кросовки.
   - Волосы прямые до плеча. Носит серёжки, цепочку на шее.
   - Обычно накрашена не выделяясь, но аккуратно.</h3>
