--- a/CHR/4.Sneshana.md
+++ b/CHR/4.Sneshana.md
@@ -3,11 +3,12 @@
 <h3><b>Внешний вид</b>:
   
   - Девушка среднего роста, немного выше Полины.
+  - Грудь 1-го размера
   - Ходит в разноцветной одежде: штаны, водолазка, иногда накидывает рубашку, кросовки.
   - Волосы прямые до плеча. Носит серёжки, цепочку на шее.
   - Обычно накрашена не выделяясь, но аккуратно.</h3>
-<h3><b>Характеристика:
-  
+<h3><b>Характеристика</b>:
+
   - По характеру похожа на пацанку, но является достаточно женственной.
   - Любит аниме, манги и играть в казуальные игры.
   - На первый взгляд кажется спокойной, рассудительной, но при большем сближении с ней, начинает занудничать.
