--- a/Script/0.1.Info.md
+++ b/Script/0.1.Info.md
@@ -3,12 +3,14 @@
 
 "$" - фон
 
+"%" - скип времени
+
 "->" - ветвления
 
 "C" - автор (и его слова)
 
 "ГГ" - главный герой (и его слова)
 
-"П" - определённый персонаж (и его слова)
+"П:<первая буква имени персонажа>" - определённый персонаж (и его слова)
 
 </h3>
