--- a/Script/1.Volume 1.md
+++ b/Script/1.Volume 1.md
@@ -3,13 +3,15 @@
 
 "$" - фон
 
+"%" - скип времени
+
 "->" - ветвления
 
 "C" - автор (и его слова)
 
 "ГГ" - главный герой (и его слова)
 
-"П" - определённый персонаж (и его слова)
+"П:<первая буква имени персонажа>" - определённый персонаж (и его слова)
 
 </h3>
 
@@ -26,7 +28,7 @@ C "Данное сообщение в кодировке UTF-8 занимает 
 
 C "На обработку этого количества информации твой компьютер произвёл вычисления, сделал механическую и физическую работу, выделил тепло."
 
-C "Это тепло возможно ничего не изменит, а возможно где то в Африке исушется озеро, возможно где то человек захлебнётся или возможно маленький мальчик умрёт от тромба в артерии, который образовался от этого излишнего тепла."
+C "Это тепло возможно ничего не изменит, а возможно где то в Африке осушется озеро, возможно где то человек захлебнётся или возможно маленький мальчик умрёт от тромба в артерии, который образовался от этого излишнего тепла."
 
 С "Конечно, это всё очень маловероятно, но шанс не равен нулю."
 
@@ -52,38 +54,140 @@ $ Фон меняется на тумбочку, на которых стоят 
 
 - Встать и сесть за ПК
 
+$ Фон меняется на компьютерный стол, на котором стоит сам пк, монитор, клавиатура, мышь.
 
+$ Экран монитора меняется на открытый браузер, где ГГ включает музыку.
 
----
+$ Экран монитора меняется на октрытый дискорд, в котором открыт сервер. В одном из гс отображаются аватары и никнеймы П:Д с П:К. Так же там появляется аватар и ник ГГ.
 
--> ГГ решает встать и садится за компьютер.
+П:Д "Хз, я сдал спокойно, думаю там 5."
 
-ГГ запускает ПК, включает музыку в браузере и запускает Дискорд.
+П:К "Харош, а мне уже через год ЕГЭ писать..."
 
-На сервере, куда Дима пригласил ГГ, сидели Дима с Колей.
+П:Д "Дк успеешь подготвоиться чё там?"
 
-ГГ заходит к ним, здоровается с Колей и Димой.
+П:К "Ну хз, мне лень... Надо было после 9 уходить всё таки..."
 
-Коля и Дима разговаривали об учёбе, которая закончилась 2 дня назад.
+П:Д "Да пофиг."
 
-ГГ присоединяется к разговору.
+ГГ "О чём болтаете?"
 
-Все троя обсуждают результаты прошедшего года на протяжении 20 минут.
+П:Д "О, [жлоыжруы], дарова. Да так по мелочам, у тебя как в колледже то дела идут?"
 
-Приходит Полина в гс.
+ГГ "Да нормально всё, на ударника закрыл и норм, не принцепиально."
 
-ГГ знакомиться с ней.
+П:К "А чё у вас за экзамены были?"
 
-Полина сразу кажется ГГ слишком надменной и высокомерной.
+ГГ "Матеша и проф предметы ток."
 
--> ГГ начинает спорить с Полиной.
+ГГ "Я, если что, вообще не готовился, мне пофиг было, но сдал не плохо."
 
--> ГГ унижает Полину и она уходит.
+П:К "Везёт тебе..."
 
-ГГ продолжает общение с Колей и Димой, вы играете в разные игры и примерно через 2 часа Дима уходит в отдельный гс со Снежаной.
+ГГ "А что такое?"
 
--> Коле становиться скучно и он уходит.
+П:К "Да я манал эти экзамены, у меня просто времени нет на это. А родителям пофиг - учись на отлично, после 11 в универ, да ещё и на дачу забирают на огород. Задолбали."
 
--> ГГ ложиться на кровать и до конца дня просматривает телефон, потом ложиться спать.
+ГГ "Ну, понимаешь, они тебя воспитали и хотят чтобы их труды не ушли напрастно. Конечно, они хотят лучшего для тебя."
+
+П:К "Может быть и так, но мне это не интересно"
+
+С "Данная дискуссия может продолжаться сто лет, но ты ещё не готов к такому выносу мозга, так что давай скипнем эту духноту."
+
+% 20 минут
+
+П:К "Да мне пофиг, что они хотят, понимаешь?"
+
+ГГ "Да ладно, ладно, успокойся, это я понял. Хорошо, дело твоё, мне не стоило лезть."
+
+$ В гс появляется аватар и никнейм П:П
+
+П:П "Привет, ребят."
+
+П:Д "Да, дарова..."
+
+ГГ "Привет."
+
+П:П "А это кто ещё такой?"
+
+П:П "Чел, может не будешь так тихо говорить, а то мне даже жалко тебя..."
+
+->
+
+- Раскидать по фактам
+
+- ~~Промолчать~~
+
+ГГ "Во-первых, мы даже не знакомы, я - [влпывып]. "Приятно познакомится!" Во-вторых, я тебя почти не знаю, так что какое право ты имеешь называть меня "Чел", м? В-третьих: я сказал ДОСТАТОЧНО ГРОМКО и меня было слышно, Дима подтвердит!"
+
+П:Д "Угу"
+
+ГГ "Вопросы какие-то?"
+
+П:П "Ой-ой-ой, давай, поплачь, что задела так твоё Эго... Ты такой тупой, раз не понимаешь, что я просто хотела узнать о тебе, почему ты сразу обижаешься?"
+
+ГГ "Действительно..."
+
+П:Д "Знакомься, это - Полина, я тебе о ней рассказывал..."
+
+->
+
+- Оскорбить
+
+- ~~Проявить уважение к новому знакомому~~
+
+ГГ "А, та кудрявая п@зда, которая строит из себя не пойми что? Знаешь, такую я себе её и представлял..."
+
+П:П "Ха ха ха... Очень хорошо пошутил, обиженка... Не  разговаривай со мной больше..."
+
+$ В гс исчезает аватар и никнейм П:П.
+
+ГГ "Дура тупая..."
+
+П:Д "Забей, пошли поиграем"
+
+ГГ "Оххх, лан, пошли"
+
+П:К "Во что пойдём?"
+
+С "Бла-бла-бла... Да, нам очень важно, давай ближе к сути..."
+
+% 2 часа
+
+$ В дс в другом гс появляется аватар и ник П:С
+
+П:Д "Всё ребят, спасибо за игру, я пойду..."
+
+П:К "Давай, тебе тоже спасибо."
+
+ГГ "Угу..."
+
+$ П:Д переходит из вашего гс в гс с П:С
+
+->
+
+- ~~Начать разговор с П:К~~
+
+- Промолчать
+
+П:К "Знаешь, я чёт тоже устал, пойду полежу что-ли."
+
+ГГ "Давай, удачи!"
+
+$ Вы с П:К выходите из гс
+
+->
+
+- Пойти лежать на кровати
+
+- ~~Зайти в гс к П:Д и П:С~~
+
+- ~~Написать П:П~~
+
+$ Фон меняется на кровать, где лежит ГГ, держа в руке телефон.
+
+С "И что это за скука? Где действие? Где веселье? Неужели я тебя НАСТОЛЬКО напугал, что ты боишься сделать хотя бы один смелый выбор? Эхх... Бездействие, тоже действие..."
+
+С "Из-за того, что ты почти ничего не делаешь, тоже бабочка может потерять крыло..."
 
 </h3>
