--- a/WIKI/CHR/4.Sneshana.md
+++ b/WIKI/CHR/4.Sneshana.md
@@ -14,4 +14,4 @@
   - На первый взгляд кажется спокойной, рассудительной, но при большем сближении с ней, начинает занудничать.
   - Вкратце можно назвать её душнилой.</h3>
 
-![[img/Snesha.png]]
+<img source="img/Snesha.png"> </img>
