--- a/WIKI/CHR/3.Polina.md
+++ b/WIKI/CHR/3.Polina.md
@@ -11,4 +11,4 @@
 - Пацанка, любит ходить в чёрном. 
 - В основном дружит с парнями, не интересуют отношения.
 
-<img src="./img/polina.png"</img>
+<img src="./img/polina.png"></img>
